src/main/kotlin/com/example/demka/shared/errors/common/UnknownError.kt
package ru.umom.hackaton.shared.errors.common

class UnknownError(override val message: String) : RuntimeException()